src/snapshots/oxutrm__view__tests__snapshot_live_80x24.snap
---
source: src/view.rs
expression: "screen(&Facts\n{\n    identity: Some(&id), path: Some(&p), standby:\n    Some(StandbyFacts\n    {\n        next_search: now + Duration::from_secs(23), last_search_failed: true,\n        ..standby(None, t)\n    }), ..facts(&q, &a, Phase::Live, now)\n})"
---
╭ oxutrm · thinlinc · 3ff1218f ────────────────────────────────────────╮
│ ● LIVE   IPv4 punched · up 1m · link 2                               │
│ rtt   140 ms  (70–171)  ▅▆█▅▄▃▄▅▆█▅▄▃▄▅▆█▅▄▃▄▅▆█▅▄▃▄▅▆█▅▄▃▄▅▆█▅▄▃▄▅▆ │
│ loss  0.0 %  ↑ 0 B/s  ↓ 0 B/s                                        │
├ standby ─────────────────────────────────────────────────────────────┤
│ none · next search in 23 s                                           │
│ last search: no second path found                                    │
├ recent ──────────────────────────────────────────────────────────────┤
│ 22:53  outage 96.3 s → switched to standby (IPv4 punched) after 1    │
│        failed ssh attempt                                            │
│ 22:59  outage 8.1 s → switched to standby (IPv4 punched)             │
│ 22:59  no second path found                                          │
├──────────────────────────────────────────────────────────────────────┤
│ Esc close  q quit  c config  s sessions                              │
╰──────────────────────────────────────────────────────────────────────╯
