src/snapshots/oxutrm__view__tests__snapshot_sessions_from_the_popup_80x24.snap
---
source: src/view.rs
expression: "sessions_text(&sessions_facts(&id, &sel, false, t), oxutrm_proto::TermSize\n{ cols: 80, rows: 24 })"
---
╭ sessions on thinlinc ─────────────────────╮
│   a3f9c01e  fish  Oct 05  80×24   in use  │
│ ▸ build     bash  09:14   120×40  this    │
│   logs      zsh   11:02   120×40          │
│   + new session                           │
├───────────────────────────────────────────┤
│ ⏎ switch  n new  r rename  x kill  q back │
╰───────────────────────────────────────────╯
